2011-07-26 Borut Razem <borut.razem AT gmail.com>

	* support/regression/test/literalop.c:
	  disabled failing test on i386 and sparc64 NetBSD gcc 4.1
	* support/regression/test/compare_2_n.c:
	  excluded failing test on NetBSD sparc64 and Solaris sparc machines 
	  for all targets;
	  see bug #3378933: Regression test compare_2_n.c fails on sparc machines

2011-07-24 Borut Razem <borut.razem AT gmail.com>

	* support/regression/test/bitfields.c:
	  fixed a regtest failure on Solaris i386 host with gcc 4.6
	  by turning off the -O2 optimization
	* support/regression/tests/compare_2_n.c:
	  added test for unsigned long type

2011-07-23 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/acinclude.m4, debugger/mcs51/configure: fix for solaris
	* support/regression/test/bitfields.c:
	  fixed a strange failure on Solaris i386 host with gcc 4.6

2011-07-22 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmem.c, src/SDCCopt.c: applied 2nd and 3rd part of patch
	  #2702889 - Summary of all uncommitted changes I applied on "my" SDCC
	  thanks Hubert Sack
	* support/regression/tests/compare_2_n.c: added

2011-07-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmain.c:
	  Reduce default value for --max-allocs-per-node to reduce compiler runtime.

2011-07-19 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: fixed MSVC 2010 compilation

2011-07-16 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c:
	  define BSD_COMP on Solaris so that gcc includes <sys/filio.h>
	  which defines FIONBIO

2011-07-15 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/bug1665511.c:
	  fixed host regression test bus error crash on sparc Solaris

2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Optimized jumptable generation.

2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeep.c: